@@ -1,3 +1,8 @@
+2015-11-14  Steven G. Kargl  <kargl@gcc.gnu.org>
+ 
+	PR fortran/67803
+	* gfortran.dg/pr67803.f90: New test.
+
 2015-11-13  Steven G. Kargl  <kargl@gccc.gnu.org>
 
 	PR fortran/68319
